--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   
 
-"homepage": "http://Samir1113.github.io/graduation",
+
 
 
 
@@ -35,23 +35,6 @@
 
 
 "dependencies": {
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"@ant-design/icons": "^5.1.4",
   
 
 
@@ -136,23 +119,6 @@
 
 
 
-"antd": "^5.6.2",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
 "axios": "^1.3.4",
   
 
@@ -171,23 +137,6 @@
 
 
 "bootstrap": "^5.2.3",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"cloudinary-react": "^1.8.1",
   
 
 
@@ -289,6 +238,23 @@
 
 
 
+"react-intersection-observer": "^9.5.1",
+  
+
+
+
+
+
+
+
+  
+
+
+
+
+
+
+
 "react-router-dom": "^6.9.0",
   
 
@@ -323,24 +289,7 @@
 
 
 
-"react-speech-recognition": "^3.10.0",
-  
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-"react-toastify": "^9.1.3",
+"react-scroll": "^1.8.9",
   
 
 
@@ -400,12 +349,7 @@
 
 
 
-"predeploy":"npm run build",
 
-
-
-
-"deploy":"gh-pages -d build",
   
 
 
