--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "joi": "^17.8.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.9.0",
